@@ -2,5 +2,9 @@
 
 SUBDIRS = libm libsdcc/regular libsdcc/enhanced
 
-include $(top_srcdir)/Makefile.common
+if HAVE_NEW_PICS
+# add new pics subdirs here
+SUBDIRS +=
+endif
 
+include $(top_srcdir)/Makefile.common
